<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunstreet\nCenters</string>
    <string name="action_settings">Settings</string>
    <string name="url">www.sunstreetcenters.org</string>
    <string name="info">Info For Parents</string>
    <string name="myth_facts">Myths &amp; Facts</string>
    <string name="extra_features">Extra Features</string>
    <string name="top_news">Top News</string>
    <string name="additional_drugs">Additional Drugs</string>
    <string name="contact_info">Contact Info</string>
    <string name="title_activity_prescription_drug">PrescriptionDrugActivity</string>
    <string name="title_activity_myths_and_facts">MythsAndFacts</string>
    <string name="title_activity_top_news">TopNewsActivity</string>
    <string name="linkOneString">"Prescription Painkillers Seen as a Gateway to Heroin "</string>
    <string name="linkTwoString">Prescription Drug Thieves Target Open Houses</string>
    <string name="linkThreeString">Feds Investigate CVS Over Allegations of Missing Hydrocodone at California Pharmacies</string>
    <string name="linkFourString">Santa Cruz Dad Explains Dangerous Affects of Prescription Drug Abuse</string>
    <string name="contactInfo">Contact Information</string>
    <string name="emailButton">Email Sunstreet</string>
    <string name="callButton">Call Sunstreet</string>
    <string name="websiteButton">Visit sunstreet.org</string>
    <string name="linkFiveString">Millennium Labs Helps Launch Coalition to Tackle Prescription Drug Misuse, Abuse in San Diego</string>
    <string name="contactInformation">Sun Street Centers\nContact Information</string>
    <string name="title_activity_additional_drugs">AdditionalDrugs</string>
    <string name="title_activity_info_for_parents">InfoForParents</string>
    <string name="firstLine">Unexplained mood changes/mood swings</string>
    <string name="secondLine">Unpredictable behavior</string>
    <string name="childAbusePreDrug">Unexplained mood changes/mood swings \\n Unpredictable behavior \\n Changes in eating or sleeping
     patterns \\n Missing money, prescriptions drugs or cough medicines from the home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_extra_features">ExtraFeatures</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="beer12oz">Beer (12oz.)</string>
    <string name="wine">Wine (8oz.)</string>
    <string name="liquor">Liquor (1.5oz.)</string>
    <string name="time">Time (Hours)</string>
    <string name="alc_content">Your blood alcohol content is:</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0.00</string>
    <string name="zeroint">0</string>
    <string name="title_activity_prescriptiondrugs_brochures">Prescriptiondrugs_brochures</string>
    <string name="title_activity_polls">Polls</string>
    <string name="next_button">Next</string>
    <string name="title_activity_front_page">FrontPage</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="inage">Input Age</string>
    <string name="submit">Submit</string>
    <string name="title_activity_cigarettes_brochure">Cigarettes_brochure</string>
    <string name="title_activity_marijuana_brochure">Marijuana_brochure</string>
    <string name="title_activity_alcohol_brochure">Alcohol_brochure</string>
    <string name="title_activity_tutorial">Tutorial</string>
    	<string-array name = "agearray">
       <item>9-13</item>
       <item>14-18</item>
       <item>19+</item>
      
   	</string-array>
   

   	<string name="title_activity_splash">Splash</string>
    <string name="school">"Submit School "</string>
    <string name="city">Area Code:</string>
    <string name="action_about">About</string>
    <string name="action_group">Group</string>
    <string name="action_call">Call</string>
    <string name="action_mail">Mail</string>
    
    <!-- Main menu item for starting new game -->
    <string name="new_game">New Game</string>
    <!-- Main menu item for launching about screen -->
    <string name="about">About</string>
    <!-- First text in about screen -->
    <string name="created_by">This app was created by &lt;a href="http://www.destil.cz">David Vávra&lt;/a>.</string>
    <!-- Second text in about screen -->
    <string name="opensource_used">The following open-source projects were used:</string>
    <!-- First opensource project in about screen -->
    <string name="project1">- &lt;a href="https://github.com/thillerson/Android-Slider-Puzzle">Android-Slider-Puzzle&lt;/a> by Tony Hillerson (MIT License)</string>
    <!-- Second opensource project in about screen -->
    <string name="project2">- &lt;a href="http://actionbarsherlock.com/">ActionBarSherlock&lt;/a> by Jake Wharton (Apache License)</string>
    <!-- Third text in about screen -->
    <string name="check_out">Check out my most successful app:</string>
    <!-- Link to the app Settle Up in about screen -->
    <string name="settle_up">&lt;a href="https://play.google.com/store/apps/details?id=cz.destil.settleup">Settle Up&lt;/a</string>
    <string name="title_activity_picture_taker">PictureTakerActivity</string>
    <string name="cameraPicture">Take Picture</string>
    <string name="gallery">Choose from Gallery</string>

</resources>
