<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TopNewsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/linkOneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkOneString" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/linkTwoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkTwoString" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/linkThreeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkThreeString" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/linkFourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkFourString" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/linkFiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkFiveString" />

    </LinearLayout>

</LinearLayout>
