<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rock"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/contactTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactInformation" />

        <Space
            android:layout_width="25dp"
            android:layout_height="75dp" />

        <Button
            android:id="@+id/visitWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/websiteButton" />
    </LinearLayout>

    <Space
        android:layout_width="150dp"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="25dp" >

        <Button
            android:id="@+id/contactEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp" >

        <Button
            android:id="@+id/callNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callButton" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>