<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:stretchColumns="1,2,3"
    tools:context=".ExtraFeatures" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sexTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/maleFemaleSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textOff="Female"
                android:textOn="Male" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:text="@string/zero"
                android:focusable="true">

                <requestFocus />
            </EditText>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/beerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer12oz" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/beerMinusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingRight="0dp"
                android:text="@string/minus" />

            <Button
                android:id="@+id/beerPlusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/beerEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:focusable="false"
                android:inputType="number"
                android:longClickable="false"
                android:text="@string/zeroint" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wineTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/wineMinusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingRight="0dp"
                android:text="@string/minus" />

            <Button
                android:id="@+id/winePlusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/wineEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:focusable="false"
                android:inputType="number"
                android:longClickable="false"
                android:text="@string/zeroint" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/LiquorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liquor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/liquorMinusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingRight="0dp"
                android:text="@string/minus" />

            <Button
                android:id="@+id/liquorPlusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/liquorEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                
                android:focusable="false"
                android:inputType="number"
                android:longClickable="false"
                android:text="@string/zeroint" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/timeMinusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingRight="0dp"
                android:text="@string/minus" />

            <Button
                android:id="@+id/timePlusButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical" >

            <EditText
                android:id="@+id/timeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                
                android:focusable="false"
                android:inputType="number"
                android:longClickable="false"
                android:text="@string/zeroint" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/bacTextView"
                android:layout_width="122dp"
                android:layout_height="38dp"
                android:text="@string/alc_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/bacEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="start"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:text="@string/zero"
                android:textAlignment="center"
                android:focusable="false"
                
                android:longClickable="false" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|left"
            android:orientation="vertical" >

            <Button
                android:id="@+id/resetButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/calculate" />
        </LinearLayout>
    </TableRow>

</TableLayout>