<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactInformation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prescriptionpagenew1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrescriptionDrugActivity" >

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_weight="0.10" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_weight="0.10" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_weight="0.10" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_weight="0.10" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_weight="0.10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:baselineAligned="true" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/infoForParentsButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/parents_info" />

            <TextView
                android:id="@+id/infoForParentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info" 
                android:textColor="#000000"
                android:textSize="15sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="0.63"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal"
            tools:ignore="NestedWeights" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights" >

                <Button
                    android:id="@+id/topNewsButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/news_launcher" />

                <TextView
                    android:id="@+id/topNewsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_news" 
                    android:textColor="#000000"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mythsAndFactsButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/myths_and_facts" />

                <TextView
                    android:id="@+id/mythsAndFactsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myth_facts" 
                    android:textColor="#000000"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_weight="0.15"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/extraInformationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_features" 
                android:textColor="#000000"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/extraInformationButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/extra_features" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/contactInformationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_info"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/contactInformationButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/sun_street_logo_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/additionalDrugsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_drugs"
                android:textColor="#000000" 
                android:textSize="15sp"/>

            <Button
                android:id="@+id/additionalDrugsButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/additional_drugs" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
